# chemicalite-orm

./: .gitignore  LICENSE  README.md  models.py  pyproject.toml
chemicalite_orm/: functions.py  models.py  molecules.py  search.py  triger.py  types.py
examples/: chemicalite.ipynb  demo.ipynb
